Fix uneven rendering of cards

--- a/src/index.css
+++ b/src/index.css
@@ -41,5 +41,5 @@ main > * {
 
   display: grid;
   grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: repeat(5, 20%);
 }
